=======================================================================
                  SIESTA CHANGES: TOP IS MOST RECENT
=======================================================================


** CHANGES ALONG trunk

-----------------------------------------------------------------------
2015-06-02  07:10:00 GMT                                     trunk-468
Replacement of NR routines. Fix for charge-conf variables.

* Replaced FFT 1d routine by a version based on Temperton's GPFA
  
  Calls to the 'four1' routine have been replaced by calls to
  'fft_gpfa_ez' with the same arguments. This routine lives
  in a new module in 'm_fft_gpfa.F', which also contains the
  legacy code by Temperton and the original entry points.
  
  The cdf_fft program in Util/Grid now uses Temperton's GPFA package.

  (A. Garcia)

* Replaced tred2/tqli by Lapack calls in m_filter (E. Artacho)
  
* Replaced derf/derfc by Netlib versions          (E. Artacho)

* Replaced random number routine                  (E. Artacho)
  
* Some routines from Numerical Recipes reimplemented
  
  Some routines from Numerical Recipes have been reimplemented with
  (mostly) the same algorithms.
  
  (Jose Soler, with minor changes by A. Garcia)
  
    - spline interpolation routines rewritten and moved to interpolation module
    - polint Lagrange interpolation rewritten and moved to interpolation module
    - ordix subroutine recoded
    - chebfd re-styled to remove remaining similarities with NR chebft
    - choldc and cholsl fully re-styled and renamed as cholDcmp and cholLinSys
    - zbrent substituted by a simple bisection root finder
    - amoeba method re-implemented
  
  (+ Interface to external routine 'die' simplified: it now
     requires a string argument) (A. Garcia)
  
* Bugfix for soft confinement charge
  
    A shell was not initialized properly if the PAO.Basis block was
    not defined. Now the initialization routine is called before
    setting up the orbital.
  