@@ -266,7 +266,7 @@ C------------------------------------------------------------------
       END IF
   800 RETURN
 C---------- Last card of CALERF ----------
-      END
+      END subroutine calerf
 
 C--------------------------------------------------------------------
 C--------------------------------------------------------------------
@@ -290,7 +290,7 @@ C------------------------------------------------------------------
       DERF = RESULT
       RETURN
 C---------- Last card of DERF ----------
-      END
+      END function derf
 
 C--------------------------------------------------------------------
 C--------------------------------------------------------------------
@@ -313,7 +313,7 @@ C------------------------------------------------------------------
       DERFC = RESULT
       RETURN
 C---------- Last card of DERFC ----------
-      END
+      END function derfc
 
 C--------------------------------------------------------------------
 C--------------------------------------------------------------------
